[tool.poetry]
name = "aapns"
version = "20.4"
description = "Asynchronous Apple Push Notification Service Client"
authors = ["Jonas Obrist <jonas.obrist@hennge.com>", "Dima Tisnek <dimaqq@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/hennge/aapns"
documentation = "https://aapns.readthedocs.io"
readme = "README.md"
homepage = "https://github.com/HENNGE/aapns"
keywords = ["push-notification", "apple", "ios", "asyncio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Communication",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
  "Framework :: AsyncIO",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^19.3.0"
click = {version = "^7.0", optional = true}
h2 = "^3.2.0"

[tool.poetry.extras]
cli = ["click"]

[tool.poetry.dev-dependencies]
pytest = "^3.0"
cryptography = "^2.7"
pytest-asyncio = "^0.10.0"
sphinx = "^2.2.0"
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"

[tool.poetry.scripts]
aapns = "aapns.cli:main"

[tool.isort]
line_length = "88"
multi_line_output = "3"
combine_as_imports = "1"
include_trailing_comma = "True"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
