[tool.poetry]
name = "aapns"
version = "20.8.1"
description = "Asynchronous Apple Push Notification Service Client"
authors = ["Jonas Obrist <jonas.obrist@hennge.com>", "Dima Tisnek <dimaqq@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/hennge/aapns"
documentation = "https://aapns.readthedocs.io"
readme = "README.md"
homepage = "https://github.com/HENNGE/aapns"
keywords = ["push-notification", "apple", "ios", "asyncio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Communications",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
  "Framework :: AsyncIO",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^19.3.0"
click = {version = "^8.0", optional = true}
h2 = "^3.2.0"

[tool.poetry.extras]
cli = ["click"]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
cryptography = "^2.7"
pytest-asyncio = "^0.20.0"
sphinx = "^2.2.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"

[tool.poetry.scripts]
aapns = "aapns.cli:main"

[tool.isort]
line_length = "88"
multi_line_output = "3"
combine_as_imports = "1"
include_trailing_comma = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
files = ["src/"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
