[tool.poetry]
name = "aapns"
version = "23.7"
description = "Asynchronous Apple Push Notification Service Client"
authors = ["Jonas Obrist <jonas.obrist@hennge.com>", "Dima Tisnek <dimaqq@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/hennge/aapns"
documentation = "https://aapns.readthedocs.io"
readme = "README.md"
homepage = "https://github.com/HENNGE/aapns"
keywords = ["push-notification", "apple", "ios", "asyncio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Communications",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
  "Framework :: AsyncIO",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^23"
h2 = "^3.2.0"
click = {version="^8", optional=true}

[tool.poetry.group.dev.dependencies]
pytest = "^7"
cryptography = "^41"
pytest-asyncio = "^0.21"
sphinx = "^7"
mypy = "^1.4"
black = "^23"
isort = "^5"
ruff = "0.0.275"
aiohttp = "^3.8.4"

[tool.poetry.extras]
cli = ["click"]

[tool.poetry.scripts]
aapns = {callable="aapns.cli:main", extras=["cli"]}

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
files = [
    "src/",
    "tests/",
]

[tool.ruff]
ignore = [
    "E722", # Do not use bare `except`
    "E501", # Line too long (104 > 88 characters)
]
select = [
    "E", "F", "T201", # Don't commit print statements
]

[tool.ruff.per-file-ignores]
"tests/**" = ["T201"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
